--- a/public/silent-check-sso.html
+++ b/public/silent-check-sso.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
+  <head>
     <title>Silent SSO Check</title>
     <script>
-        parent.postMessage(location.href, location.origin);
+      parent.postMessage(location.href, location.origin);
     </script>
-</head>
-<body>
+  </head>
+  <body>
     <h2>Silent SSO Check</h2>
     <p>This page is used for silent authentication checks with Keycloak.</p>
-</body>
+  </body>
 </html>
